language_tests/outputs/invalid/closure_use_after_move.out
error: use of moved value 'list'
 -> language_tests/source_files/invalid/closure_use_after_move.tr:15:4
	    list.len()
	    ^^^^
